Reapply "Refactored Listener according to new grammar"
This reverts commit 0b8e7af4c09a022955b4e57dc0cea2764b05a91c.